# getdata

./: ChangeLog  NEWS  README  RELEASE_NOTES.in  configure.ac
.github/workflows/: bootstrap-windows.sh  bootstrap.sh  build.yml  cmake-ci.yml  package.yml
bindings/python/: pygetdata.c  pyproject.toml
bindings/python/test/: test_wheel.py
cmake/: CMakeLists.txt  gd_config.h.in
cmake/bindings/cxx/test/: CMakeLists.txt
cmake/bindings/python/: CMakeLists.txt
cmake/src/: CMakeLists.txt
cmake/test/: CMakeLists.txt
cmake/util/: CMakeLists.txt
doc/: README.python
m4/: python.m4  version.m4  win32.m4
src/: Makefile.am  gzip.c  internal.h  lzma.c
test/: bzip_get.c  bzip_get_cont.c  bzip_get_far.c  bzip_get_get.c  bzip_get_get2.c  bzip_get_put.c  bzip_move_from.c  bzip_move_to.c  bzip_nframes.c  bzip_put.c  bzip_put_back.c  bzip_put_endian.c  bzip_put_pad.c  bzip_put_sub.c  bzip_seek.c  bzip_seek_far.c  bzip_sync.c  flac_get_big.c  flac_get_cont.c  flac_get_far.c  flac_get_get.c  flac_get_get2.c  flac_get_int64.c  flac_get_int8.c  flac_get_little.c  flac_get_long.c  flac_move_from.c  flac_nframes.c  flac_put_big.c  flac_put_little.c  flac_seek.c  flac_seek_far.c  flac_sync.c  gzip_get.c  gzip_get_cont.c  gzip_get_far.c  gzip_get_get.c  gzip_get_get2.c  gzip_get_put.c  gzip_move_from.c  (+44 more)
