[build-system]
requires = ["scikit-build-core>=0.5", "numpy>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "pygetdata"
description = "The GetData Project is the reference implementation of the Dirfile Standards, a filesystem-based, column-oriented database format for time-ordered binary data."
dependencies = ["numpy>=1.7"]
dynamic = ["version"]
readme = {file = "README", content-type = "text/plain"}
license = "LGPL-2.1-or-later"
authors = [
    {name = "D. V. Wiebe", email = "dvw@ketiltrout.net"},
    {name = "C. B. Netterfield", email = "netterfield@astro.utoronto.ca"},
]

[project.urls]
Homepage = "https://github.com/ketiltrout/getdata"
Issues = "https://github.com/ketiltrout/getdata/issues"

[tool.scikit-build]
cmake.source-dir = "../../cmake"
cmake.build-type = "Release"
cmake.args = ["-DBUILD_PYTHON=ON", "-DGD_TEST=OFF", "-DGD_UTIL=ON", "-DBUILD_CXX=OFF"]
install.components = ["Runtime"]
wheel.install-dir = "."

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "../../m4/version.m4"
regex = '''
m4_define\(getdata_major,\s*(?P<major>\d+)\)[\s\S]*
m4_define\(getdata_minor,\s*(?P<minor>\d+)\)[\s\S]*
m4_define\(getdata_revision,\s*(?P<micro>\d+)\)
'''
result = "{major}.{minor}.{micro}"

